# rl_biped_ros2

./: README.md
walker_ai/: CMakeLists.txt  package.xml  setup.cfg  setup.py
walker_ai/src/: activate_controls.py  control_biped.cpp  control_biped_test.py  control_biped_test_node.py  deactivate_controls.py  delete_entity.py  delete_walker.py  raw_control.py  reset_controls.cpp  reset_controls.py  reset_joints.py  reset_sim.py  respawn_walker.py  simple_pub.py  simple_sub.py
walker_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
walker_sim/config/: joint_position_control.yaml
walker_sim/launch/: barebones_gazebo.launch.py  display.launch.py  empty_world.launch.py  github_implement.launch.py  rl.launch.py  rviz_display.launch.py  walker_gazebo.launch.py
walker_sim/robots/: BipedalWalker.proto  barebones.urdf  simple_walker.sdf  simple_walker.urdf  walker_fake.sdf  walker_fake.urdf
walker_sim/rviz/: urdf.rviz
walker_sim/src/: respawn_walker.py  spawn_biped_gazebo.py  spawn_entity.py
walker_sim/walker_sim/config/: joint_position_control.yaml
walker_sim/walker_sim/launch/: spawn_walker_gazebo.py  walker_gazebo.launch.py  walker_gazebo_launch.py
walker_sim/walker_sim/robots/: walker_fake.urdf
walker_sim/walker_sim/src/: spawn_biped_gazebo.py
